--- a/ARnft/arNFT_video_example.html
+++ b/ARnft/arNFT_video_example.html
@@ -65,7 +65,7 @@
 						nftAddTJS.oef = true;
                         // Set width, height and width and height number of segments of the PlaneGeometry.
                         let imgConfig = {w: 1, h: 1, ws: 1, hs: 1};
-                        nftAddTJS.addVideo('arvideo', 'pinball', 180, imgConfig, false);
+                        nftAddTJS.addVideo('arvideo', 'guitar', 180, imgConfig, false);
 	
 						const tick = () => {
 							sceneThreejs.draw();
